[tool.poetry]
name = "emolet"
version = "0.1.0"
description = ""
authors = ["David Rey Blanco <drey@idealista.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"

[tool.poetry.dev-dependencies]
pandas = "^1.5.3"
streamlit = "^1.19.0"
xgboost = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
